--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,11 +4,28 @@
       Ionic Blank
     </ion-title>
   </ion-navbar>
+
+  <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+  <ion-list>
+    <ion-item *ngFor="let item of items">
+      {{ item }}
+    </ion-item>
+  </ion-list>
+
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <h2>Results</h2>
+  <h2 id="noresults">No Results</h2>
+    <ion-list>
+        <ion-item *ngFor="let result of results">
+          <ion-thumbnail item-start>
+            <img src={{result.image}}>
+          </ion-thumbnail>
+          <h2>{{result.title}}</h2>
+          <p>{{result.author}}</p>
+          <p>{{result.date}}</p>
+          <button ion-button clear item-end>></button>
+        </ion-item>
+      </ion-list>
 </ion-content>
