--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -7,12 +7,15 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>details</ion-title>
+    <ion-title>Details</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+<h3>Title : {{result.title}}</h3>
+<h3>Author : {{result.author}}</h3>
+<h3>Date : {{result.date}}</h3>
+<img src={{result.image}}>
 </ion-content>
