--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,6 +12,7 @@
     </ion-item>
   </ion-list>
 
+<button ion-button round color = 'dark'(click) = "get2018items()">2018 Movies</button>
 </ion-header>
 
 <ion-content padding>
